--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ attrs==21.4.0
 cffi==1.15.1
 cfgrib==0.9.10.1
 click==8.1.3
+colorama==0.4.5
 cycler==0.11.0
 eccodes==1.4.2
+ecmwflibs==0.4.17
 findlibs==0.0.2
 fonttools==4.34.4
 kiwisolver==1.4.4
